[project]
name = 'matrix'
version = '1.0.0'
description = ''
requires-python = '>=3.11'

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
matplotlib = '^3.10.8'
pandas = '^3.0.0'
requests = '^2.32.5'

[build-system]
requires = ['poetry-core>=2.0.0,<3.0.0']
build-backend = 'poetry.core.masonry.api'
